[package]
name = "oauth2"
authors = ["Alec S (allonsy) <linuxbash8@gmail.com>"]
version = "0.1.10"
license = "MIT/Apache-2.0"
description = "Bindings for exchanging OAuth 2 tokens with updated dependencies"
homepage = "https://allonsy.github.io/oauth2-rs/oauth2"
repository = "https://github.com/allonsy/oauth2-rs"

[dependencies]
curl = "^0.3.0"
url = "^1.1.1"
log = "^0.3"
